globus-gram-job-manager-sge (2.6-1+gt6.@distro@) @distro@; urgency=low

  * Update bug report URL

 -- Globus Toolkit <support@globus.org>  Sat, 20 Aug 2016 09:11:30 -0400

globus-gram-job-manager-sge (2.5-1+gt6.@distro@) @distro@; urgency=low

  * Handle UGE 8.2.0 timestamp format change

 -- Globus Toolkit <support@globus.org>  Thu, 22 Jan 2015 10:54:52 -0500

globus-gram-job-manager-sge (2.4-2+gt6.@distro@) @distro@; urgency=low

  * Attempt to fix build in pbuilder chroot

 -- Globus Toolkit <support@globus.org>  Fri, 22 Aug 2014 16:29:29 -0400

globus-gram-job-manager-sge (2.4-1+gt6.@distro@) @distro@; urgency=low

  * Merge fixes from ellert-globus_6_branch

 -- Globus Toolkit <support@globus.org>  Fri, 22 Aug 2014 16:29:29 -0400

globus-gram-job-manager-sge (2.3-3+gt6.@distro@) @distro@; urgency=low

  * Fix Source path

 -- Globus Toolkit <support@globus.org>  Wed, 20 Aug 2014 15:42:40 -0400

globus-gram-job-manager-sge (2.3-2+gt6.@distro@) @distro@; urgency=low

  * Rename dbg packages

 -- Globus Toolkit <support@globus.org>  Wed, 18 Jun 2014 14:38:44 -0400

globus-gram-job-manager-sge (2.3-1+gt6.@distro@) @distro@; urgency=low

  * Merge changes from Mattias Ellert

 -- Globus Toolkit <support@globus.org>  Mon, 09 Jun 2014 14:39:44 -0400

globus-gram-job-manager-sge (2.2-1+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:47:31 -0400

globus-gram-job-manager-sge (2.1-3+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:39:57 -0400

globus-gram-job-manager-sge (2.1-2+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes, Warning Cleanup

 -- Globus Toolkit <support@globus.org>  Thu, 27 Feb 2014 16:48:42 -0500

globus-gram-job-manager-sge (2.1-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Sat, 15 Feb 2014 14:15:15 -0500
