@@ -1,0 +1,5 @@
+#! /usr/bin/dh-exec
+etc/globus/globus-sge.conf
+usr/share/globus/globus_gram_job_manager/sge.rvf
+${perl_vendorlib}/Globus/GRAM/JobManager/sge.pm
+usr/share/doc/globus-gram-job-manager-sge/GLOBUS_LICENSE
