@@ -1,159 +1,30 @@
 #!/usr/bin/make -f
-# -*- makefile -*-
+# See debhelper(7) (uncomment to enable)
+# output every command that modifies files on the build system.
+# export DH_VERBOSE = 1
 
-DEB_HOST_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
-DEB_BUILD_GNU_TYPE ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
+# see EXAMPLES in dpkg-buildflags(1) and read /usr/share/dpkg/*
+DPKG_EXPORT_BUILDFLAGS = 1
+include /usr/share/dpkg/default.mk
+export perl_vendorlib = $(shell eval "`perl -V:installvendorlib`"; echo $$installvendorlib)
 
-ifneq (,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
-NUMJOBS = $(patsubst parallel=%,%,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
-MAKEFLAGS += -j$(NUMJOBS)
-endif
 
-name = globus-gram-job-manager-sge
-_name = globus_gram_job_manager_sge
-version = 2.6
+# see FEATURE AREAS in dpkg-buildflags(1)
+#export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 
-INSTALLDIR = $(CURDIR)/debian/tmp
 DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
 
-_prefix = /usr
-_sysconfdir = /etc
-_bindir = $(_prefix)/bin
-_sbindir = $(_prefix)/sbin
-_includedir = $(_prefix)/include
-_libdir = $(_prefix)/lib/$(DEB_HOST_MULTIARCH)
-_datadir = $(_prefix)/share
-_mandir = $(_datadir)/man
-_docdir = $(_datadir)/doc
+_sysconfdir=/etc
+_libdir=/usr/lib
 
-DEB_BUILD_ARCH_CPU ?= $(shell dpkg-architecture -qDEB_BUILD_ARCH_CPU)
-
-perl_vendorlib = $(shell eval "`perl -V:installvendorlib`"; echo $$installvendorlib)
-
-configure: configure-stamp
-	:
-
-configure-stamp:
-	dh_testdir
-	autoreconf -if
-	for f in config.sub config.guess ; do \
-	  if [ -e /usr/share/misc/$$f -a ! -e $$f.dist ] ; then \
-	    mv build-aux/$$f $$f.dist ; \
-	    cp -f /usr/share/misc/$$f build-aux/$$f ; \
-	  fi ; \
-	done
-	QSUB=/usr/bin/qsub \
-        QSTAT=/usr/bin/qstat \
-        QDEL=/usr/bin/qdel \
-        QCONF=/usr/bin/qconf \
-        MPIRUN=no \
-        SUN_MPrun=no \
-        ./configure \
-	   --host=$(DEB_HOST_GNU_TYPE) \
-	   --build=$(DEB_BUILD_GNU_TYPE) \
-	   --prefix=$(_prefix) \
-	   --sysconfdir=$(_sysconfdir) \
-	   --libdir=$(_libdir) \
-	   --mandir='$${datadir}/man' \
-	   --infodir='$${datadir}/info' \
-           --docdir='$(_docdir)/$(name)' \
-           --with-globus-state-dir='/var/lib/globus' \
-	   --with-perlmoduledir='$(perl_vendorlib)' \
-           --disable-static \
+override_dh_auto_configure:
+	dh_auto_configure -- --sysconfdir=$(_sysconfdir) --enable-silent-rules --with-globus-state-dir='/var/lib/globus' --with-perlmoduledir='$(perl_vendorlib)' --disable-static --libdir=$(_libdir)/$(DEB_HOST_MULTIARCH) --docdir=/usr/share/doc/globus-gram-job-manager-sge \
            --with-sge-config=/etc/default/gridengine \
            --with-sge-root=undefined \
            --with-sge-cell=undefined \
            --without-queue-validation \
            --without-pe-validation
-	touch $@
-
-build: build-stamp
-	:
-
-build-stamp: configure-stamp
-	dh_testdir
-	$(MAKE)
-ifeq (,$(filter nocheck,$(DEB_BUILD_OPTIONS)))
-	$(MAKE) check
-endif
-	touch $@
-
-clean: cleanup
-	:
-
-cleanup:
-	dh_testdir
-	dh_testroot
-	if [ -r Makefile ] ; then $(MAKE) distclean ; fi
-	for f in config.sub config.guess ; do \
-	  if [ -e $$f.dist ] ; then \
-	    mv -f $$f.dist build-aux/$$f ; \
-	  fi ; \
-	done
-	# Remove autogenerated files
-	rm -f aclocal.m4
-	rm -f configure
-	rm -f config.guess
-	rm -f config.sub
-	rm -f ltmain.sh
-	rm -f mkinstalldirs
-	rm -f doxygen/doc
-	rm -rf autom4te.cache
-	find . -name Makefile.in -exec rm {} ';'
-	rm -f build-stamp configure-stamp
-	dh_clean debian/*.install
-
-install: build-stamp
-	dh_testdir
-	dh_testroot
-	dh_clean -k
-	$(MAKE) install DESTDIR=$(INSTALLDIR)
-	# Remove pkgconfig (.pc file)
-	find $(INSTALLDIR)$(_libdir) -name '*.pc' -exec rm -v '{}' \;
-	# Remove libtool archives (.la files)
-	find $(INSTALLDIR)$(_libdir) -name 'lib*.la' -exec rm -v '{}' \;
-	# Remove jobmanager-sge file
-	rm $(INSTALLDIR)/etc/grid-services/jobmanager-sge
-	# Generate package filelists
-	ls -1 \
-	  debian/tmp$(_sysconfdir)/globus/*.conf \
-	  debian/tmp$(_datadir)/globus/globus_gram_job_manager/sge.rvf \
-	  debian/tmp$(perl_vendorlib)/Globus/GRAM/JobManager/*.pm \
-	  debian/tmp$(_docdir)/$(name)/* \
-	  > debian/$(name).install
-	ls -1 \
-	  debian/tmp$(_sysconfdir)/grid-services/available/*poll \
-	  > debian/$(name)-setup-poll.install
-	ls -1 \
-	  debian/tmp$(_sysconfdir)/grid-services/available/*seg \
-	  debian/tmp$(_sysconfdir)/globus/scheduler-event-generator/available/sge \
-	  debian/tmp$(_libdir)/*.so* \
-	  > debian/$(name)-setup-seg.install
-
-binary-indep:
-	:
-
-binary-arch: install
-	dh_testdir
-	dh_testroot
-	dh_installchangelogs
-	dh_installdocs
-	dh_install --fail-missing
-	dh_installman
-	dh_link
-	dh_strip
-	dh_compress
-	dh_fixperms
-	dh_perl
-	dh_makeshlibs
-	dh_installdeb
-	dh_shlibdeps
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
 
 
-binary: binary-indep binary-arch
-	:
-
-.PHONY: build clean binary-indep binary-arch binary install configure
+%:
+	dh $@  --with autotools-dev
